--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8442,6 +8442,10 @@
     <Content Include="bower_DevExpress\globalize-1.3.0\src\.dist-jshintrc" />
     <Content Include="bower_DevExpress\globalize-1.3.0\src\.jshintrc" />
     <Content Include="Areas\ActivoFijo\Views\DepreciacionAF\Index.cshtml" />
+    <Content Include="Areas\Inventario\Views\TransferenciasInventario\Index.cshtml" />
+    <Content Include="Areas\Inventario\Views\TransferenciasInventario\Nuevo.cshtml" />
+    <Content Include="Areas\Inventario\Views\TransferenciasInventario\Modificar.cshtml" />
+    <Content Include="Areas\Inventario\Views\TransferenciasInventario\Anular.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
     <Content Include="Areas\RRHH\Views\HorasExtras\Index.cshtml" />
@@ -8511,7 +8515,6 @@
     <Folder Include="Areas\Importacion\Models\" />
     <Folder Include="Areas\Importacion\Views\Shared\" />
     <Folder Include="Areas\Inventario\Models\" />
-    <Folder Include="Areas\Inventario\Views\TransferenciasInventario\" />
     <Folder Include="Areas\Reportes\Models\" />
     <Folder Include="Areas\RRHH\Models\" />
     <Folder Include="Areas\RRHH\Views\CapacitacionesEmpleado\" />
