--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -60,10 +60,6 @@
     <Compile Include="Caja\caj_Caja_Movimiento_det_Bus.cs" />
     <Compile Include="Caja\caj_Caja_Movimiento_Tipo_Bus.cs" />
     <Compile Include="Caja\caj_parametro_Bus.cs" />
-    <Compile Include="Caja\cp_conciliacion_Caja_Bus.cs" />
-    <Compile Include="Caja\cp_conciliacion_Caja_det_Bus.cs" />
-    <Compile Include="Caja\cp_conciliacion_Caja_det_Ing_Caja_Bus.cs" />
-    <Compile Include="Caja\cp_conciliacion_Caja_det_x_ValeCaja_Bus.cs" />
     <Compile Include="Contabilidad\ct_anio_fiscal_Bus.cs" />
     <Compile Include="Contabilidad\ct_anio_fiscal_x_cuenta_utilidad_Bus.cs" />
     <Compile Include="Contabilidad\ct_cbtecble_Bus.cs" />
@@ -196,6 +192,7 @@
     <Compile Include="Reportes\RRHH\ROL_008_Bus.cs" />
     <Compile Include="Reportes\RRHH\ROL_009_Bus.cs" />
     <Compile Include="Reportes\RRHH\ROL_010_Bus.cs" />
+    <Compile Include="Reportes\RRHH\ROL_011_Bus.cs" />
     <Compile Include="RRHH\ro_Acta_Finiquito_Bus.cs" />
     <Compile Include="RRHH\ro_Acta_Finiquito_Detalle_Bus.cs" />
     <Compile Include="RRHH\ro_area_Bus.cs" />
