--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8451,6 +8451,8 @@
     <Content Include="Areas\Caja\Views\ConciliacionCaja\Index.cshtml" />
     <Content Include="Areas\Caja\Views\ConciliacionCaja\Nuevo.cshtml" />
     <Content Include="Areas\Caja\Views\ConciliacionCaja\Modificar.cshtml" />
+    <Content Include="Areas\Inventario\Views\TransferenciasInventario\_GridViewPartial_transferencias.cshtml" />
+    <Content Include="Areas\Inventario\Views\TransferenciasInventario\_GridViewPartial_transferencias_det.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
     <Content Include="Areas\RRHH\Views\HorasExtras\Index.cshtml" />
