--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8461,6 +8461,7 @@
     <Content Include="Areas\Inventario\Views\TransferenciasInventario\_GridViewPartial_transferencias_det.cshtml" />
     <Content Include="Areas\Caja\Views\ConciliacionCaja\_GridViewPartial_conciliacion_caja.cshtml" />
     <Content Include="Areas\Reportes\Views\RRHHReportes\ROL_011.cshtml" />
+    <Content Include="Areas\Caja\Views\ConciliacionCaja\_GridViewPartial_conciliacion_vales.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
     <Content Include="Areas\RRHH\Views\HorasExtras\Index.cshtml" />
