--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8476,8 +8476,8 @@
     <Content Include="Areas\Reportes\Views\RRHHReportes\ROL_012.cshtml" />
     <Content Include="Areas\Inventario\Views\Subgrupo\Anular.cshtml" />
     <Content Include="Areas\Caja\Views\ConciliacionCaja\_ComboBoxPartial_persona.cshtml" />
-    <Content Include="Areas\General\Views\Persona\_ComboBoxPartial_persona.cshtml" />
     <Content Include="Areas\Reportes\Views\CuentasPorPagarReportes\CXP_007.cshtml" />
+    <Content Include="Areas\Caja\Views\ConciliacionCaja\_GridViewPartial_facturas.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
     <Content Include="Areas\RRHH\Views\HorasExtras\Index.cshtml" />
