--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Reportes\CuentasPorPagar\CXP_006_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_006_diario_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_007_Bus.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_008_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_004_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_005_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_007_Bus.cs" />
