--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Inventario\in_categorias_Info.cs" />
     <Compile Include="Inventario\in_grupo_Info.cs" />
     <Compile Include="Inventario\in_Ing_Egr_Inven_det_Info.cs" />
+    <Compile Include="Inventario\in_Ing_Egr_Inven_distribucion_Info.cs" />
     <Compile Include="Inventario\in_Ing_Egr_Inven_Info.cs" />
     <Compile Include="Inventario\in_linea_Info.cs" />
     <Compile Include="Inventario\in_Marca_Info.cs" />
