--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -183,6 +183,8 @@
     <Compile Include="Reportes\CuentasPorPagar\CXP_006_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_007_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_008_Info.cs" />
+    <Compile Include="Reportes\Facturacion\FAC_001_Info.cs" />
+    <Compile Include="Reportes\Facturacion\FAC_002_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_004_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_005_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_007_Info.cs" />
