--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -698,6 +698,7 @@
     <Compile Include="Reportes\RRHH\ROL_010_Data.cs" />
     <Compile Include="Reportes\RRHH\ROL_011_Data.cs" />
     <Compile Include="Reportes\RRHH\ROL_012_Data.cs" />
+    <Compile Include="Reportes\RRHH\ROL_013_Data.cs" />
     <Compile Include="ro_Acta_Finiquito.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
