--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -88,6 +88,7 @@
     <Compile Include="CuentasPorPagar\cp_cuotas_x_doc_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_nota_DebCre_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_orden_giro_Info.cs" />
+    <Compile Include="CuentasPorPagar\cp_orden_giro_pagos_sri_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_orden_pago_cancelaciones_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_orden_pago_det_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_orden_pago_estado_aprob_Info.cs" />
