--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -665,6 +665,7 @@
     <Compile Include="Reportes\Banco\BAN_004_Data.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_Data.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_ingresos_Data.cs" />
+    <Compile Include="Reportes\Contabilidad\CONTA_002_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_diario_Data.cs" />
