--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -373,6 +373,7 @@
     <Compile Include="Inventario\in_grupo_Data.cs" />
     <Compile Include="Inventario\in_Ing_Egr_Inven_Data.cs" />
     <Compile Include="Inventario\in_Ing_Egr_Inven_det_Data.cs" />
+    <Compile Include="Inventario\in_Ing_Egr_Inven_distribucion_Data.cs" />
     <Compile Include="Inventario\in_linea_Data.cs" />
     <Compile Include="Inventario\in_Marca_Data.cs" />
     <Compile Include="Inventario\in_Motivo_Inven_Data.cs" />
@@ -405,6 +406,9 @@
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
     <Compile Include="in_Ing_Egr_Inven_det.cs">
+      <DependentUpon>Model_inventario.tt</DependentUpon>
+    </Compile>
+    <Compile Include="in_Ing_Egr_Inven_distribucion.cs">
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
     <Compile Include="in_linea.cs">
@@ -1163,6 +1167,15 @@
     </Compile>
     <Compile Include="VWINV_007.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="vwin_Ing_Egr_Inven_distribucion.cs">
+      <DependentUpon>Model_inventario.tt</DependentUpon>
+    </Compile>
+    <Compile Include="vwin_Ing_Egr_Inven_distribucion_det.cs">
+      <DependentUpon>Model_inventario.tt</DependentUpon>
+    </Compile>
+    <Compile Include="vwin_Ing_Egr_Inven_distribucion_x_distribuir.cs">
+      <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
     <Compile Include="vwin_producto_hijo_combo.cs">
       <DependentUpon>Model_inventario.tt</DependentUpon>
