--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -299,6 +299,7 @@
     <Compile Include="Areas\Inventario\Controllers\CatalogoInventarioController.cs" />
     <Compile Include="Areas\Inventario\Controllers\CatalogoTipoInventarioController.cs" />
     <Compile Include="Areas\Inventario\Controllers\CategoriaController.cs" />
+    <Compile Include="Areas\Inventario\Controllers\DistribucionPorLoteController.cs" />
     <Compile Include="Areas\Inventario\Controllers\EgresoInventarioController.cs" />
     <Compile Include="Areas\Inventario\Controllers\GrupoController.cs" />
     <Compile Include="Areas\Inventario\Controllers\IngresoInventarioController.cs" />
@@ -8518,6 +8519,8 @@
     <Content Include="Areas\Reportes\Views\RRHHReportes\ROL_013.cshtml" />
     <Content Include="Areas\Caja\Views\ConciliacionCaja\_CmbPersona_ConciliacionCaja.cshtml" />
     <Content Include="Areas\Reportes\Views\ContabilidadReportes\CONTA_002.cshtml" />
+    <Content Include="Areas\Inventario\Views\DistribucionPorLote\Index.cshtml" />
+    <Content Include="Areas\Inventario\Views\DistribucionPorLote\_GridViewPartial_distribuion.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
