--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8522,6 +8522,9 @@
     <Content Include="Areas\Reportes\Views\ContabilidadReportes\CONTA_002.cshtml" />
     <Content Include="Areas\Inventario\Views\DistribucionPorLote\Index.cshtml" />
     <Content Include="Areas\Inventario\Views\DistribucionPorLote\_GridViewPartial_distribuion.cshtml" />
+    <Content Include="Areas\Inventario\Views\DistribucionPorLote\Nuevo.cshtml" />
+    <Content Include="Areas\Inventario\Views\DistribucionPorLote\_GridViewPartial_por_distribuir.cshtml" />
+    <Content Include="Areas\Inventario\Views\DistribucionPorLote\_GridViewPartial_distribuidos.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
