--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1117,6 +1117,9 @@
     <Compile Include="vwcp_retencion.cs">
       <DependentUpon>Model_cuentas_por_pagar.tt</DependentUpon>
     </Compile>
+    <Compile Include="vwct_cbtecble_con_ctacble_acreedora.cs">
+      <DependentUpon>Model_contabilidad.tt</DependentUpon>
+    </Compile>
     <Compile Include="VWCXP_001.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
