--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -8525,6 +8525,7 @@
     <Content Include="Areas\Inventario\Views\DistribucionPorLote\Nuevo.cshtml" />
     <Content Include="Areas\Inventario\Views\DistribucionPorLote\_GridViewPartial_por_distribuir.cshtml" />
     <Content Include="Areas\Inventario\Views\DistribucionPorLote\_GridViewPartial_distribuidos.cshtml" />
+    <Content Include="Areas\Inventario\Views\DistribucionPorLote\_GridViewPartial_distribucion_det.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
