--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1090,6 +1090,9 @@
     <Compile Include="VWCAJ_002_ingresos.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
+    <Compile Include="vwcaj_Caja_Movimiento.cs">
+      <DependentUpon>Model_caja.tt</DependentUpon>
+    </Compile>
     <Compile Include="vwcaj_Caja_Movimiento_x_Conciliar.cs">
       <DependentUpon>Model_caja.tt</DependentUpon>
     </Compile>
