--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -254,6 +254,7 @@
     <Compile Include="Areas\Contabilidad\Controllers\TipoComprobanteController.cs" />
     <Compile Include="Areas\CuentasPorCobrar\Controllers\CatalogoCXCController.cs" />
     <Compile Include="Areas\CuentasPorCobrar\Controllers\CatalogoTipoCXCController.cs" />
+    <Compile Include="Areas\CuentasPorCobrar\Controllers\CobranzaController.cs" />
     <Compile Include="Areas\CuentasPorCobrar\Controllers\ParametroCXCController.cs" />
     <Compile Include="Areas\CuentasPorCobrar\Controllers\TipoCobroController.cs" />
     <Compile Include="Areas\CuentasPorCobrar\CuentasPorCobrarAreaRegistration.cs" />
@@ -8523,6 +8524,11 @@
     <Content Include="Areas\Inventario\Views\DistribucionPorLote\_GridViewPartial_distribucion_det.cshtml" />
     <Content Include="Areas\Caja\Views\CajaMovimientoIngreso\_CmbPersona_MovimientoIngreso.cshtml" />
     <Content Include="Areas\Caja\Views\CajaMovimientoEgreso\_CmbPersona_MovimientoEgreso.cshtml" />
+    <Content Include="Areas\CuentasPorCobrar\Views\Cobranza\Index.cshtml" />
+    <Content Include="Areas\CuentasPorCobrar\Views\Cobranza\Nuevo.cshtml" />
+    <Content Include="Areas\CuentasPorCobrar\Views\Cobranza\Modificar.cshtml" />
+    <Content Include="Areas\CuentasPorCobrar\Views\Cobranza\Anular.cshtml" />
+    <Content Include="Areas\CuentasPorCobrar\Views\Cobranza\_GridViewPartial_cobranza.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
